some optimisation in stream expression for facet